--- a/package.json
+++ b/package.json
@@ -45,6 +45,16 @@
     "prettier": "^2.0.5"
   },
   "dependencies": {
+    "@types/clear": "^0.1.0",
+    "@types/figlet": "^1.2.0",
+    "@types/node": "^13.13.2",
+    "@types/node-emoji": "^1.8.1",
+    "@types/node-fetch": "^2.5.7",
+    "chalk": "^4.0.0",
+    "clear": "^0.1.0",
+    "figlet": "^1.3.0",
+    "node-emoji": "^1.10.0",
+    "node-fetch": "^2.6.0",
     "typescript": "^3.8.3"
   }
 }
